--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "date-fns": "^2.29.3",
+    "globby": "^14.0.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "next-sitemap": "^4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
