--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "next build",
-    "postbuild": "next-sitemap",
+    "build": "next-sitemap && next build",
     "dev": "next dev",
     "start": "next start"
   },
