didn't work; configured next-sitemap to output to the 'out' folder

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "build": "next-sitemap && next build",
+    "build": "next build",
+    "postbuild": "next-sitemap",
     "dev": "next dev",
     "start": "next start"
   },
