--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gray-matter": "^4.0.3",
     "next": "latest",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
@@ -19,12 +20,13 @@
     "sass": "^1.70.0"
   },
   "engines": {
-    "node": "18.17.1"
+    "node": "23.10.0"
   },
   "devDependencies": {
     "@types/node": "20.10.5",
     "@types/react": "18.2.46",
     "@types/rss": "^0.0.32",
-    "ts-migrate": "^0.1.35"
+    "ts-migrate": "^0.0.0",
+    "typescript": "5.8.2"
   }
 }
