--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "dependencies": {
     "date-fns": "^2.29.3",
+    "decap-cms": "^3.8.2",
     "gray-matter": "^4.0.3",
-    "next": "latest",
+    "next": "^15.4.3",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "rss": "^1.2.2",
@@ -27,7 +28,6 @@
     "@types/node": "20.10.5",
     "@types/react": "18.2.46",
     "@types/rss": "^0.0.32",
-    "ts-migrate": "^0.0.0",
     "typescript": "5.8.2"
   }
 }
