--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
   "private": true,
   "scripts": {
-    "build": "npx tsx ./generate-rss.tsx && next build",
+    "build": "npx tsx ./scripts/generate-rss.ts && next build",
     "postbuild": "next-sitemap",
     "dev": "next dev",
     "start": "next start"
   },
   "dependencies": {
-    "date-fns": "^2.29.3",
+    "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "rss": "^1.2.2",
-    "sass": "^1.70.0",
-    "tsx": "^4.19.3"
+    "sass": "^1.91.0",
+    "tsx": "^4.20.5"
   },
   "engines": {
     "node": "23.10.0"
   },
   "devDependencies": {
-    "@types/node": "20.10.5",
-    "@types/react": "18.2.46",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.12",
     "@types/rss": "^0.0.32",
-    "ts-migrate": "^0.0.0",
-    "typescript": "5.8.2"
+    "typescript": "^5.9.2"
   }
 }
