--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "decap-cms-app": "^3.8.3",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "next-sitemap": "^4.2.3",
@@ -22,6 +23,12 @@
   },
   "engines": {
     "node": "23.10.0"
+  },
+  "overrides": {
+    "trim": "^1.0.3",
+    "remark-parse": "^11.0.0",
+    "mdast-util-to-hast": "^13.2.0",
+    "remark-rehype": "^11.1.1"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
