--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,7 +4,7 @@ backend:
   branch: main # Branch to update (optional; defaults to master)
 
 # Uncomment below to enable drafts
-# publish_mode: editorial_workflow
+publish_mode: editorial_workflow
 
 media_folder: public/images
 public_folder: /images
@@ -18,6 +18,7 @@ collections:
     fields:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime"}
+      - {label: "Draft", name: "draft", widget: "boolean", default: false, required: false}
       - {label: "Body", name: "body", widget: "markdown"}
   
   - name: "pages"
@@ -29,4 +30,4 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string", default: "Home"}
           - {label: "Description", name: "description", widget: "text"}
-          - {label: "Body", name: "body", widget: "markdown"}
+          - {label: "Content", name: "body", widget: "markdown", required: false}
