--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "npx tsx ./scripts/generate-rss.ts && next build",
-    "postbuild": "next-sitemap",
+    "build": "next build",
     "dev": "next dev",
     "start": "next start"
   },
@@ -11,13 +10,11 @@
     "decap-cms-app": "^3.8.3",
     "gray-matter": "^4.0.3",
     "next": "latest",
-    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "rss": "^1.2.2",
     "sass": "^1.91.0",
     "tsx": "^4.20.5"
   },
@@ -33,7 +30,6 @@
   "devDependencies": {
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.12",
-    "@types/rss": "^0.0.32",
     "typescript": "^5.9.2"
   }
 }
