--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -12,7 +12,7 @@ public_folder: /images
 collections:
   - name: "posts"
     label: "Blog Posts"
-    folder: "posts"
+    folder: "content/posts"
     create: true
     slug: "{{slug}}"
     fields:
@@ -26,7 +26,7 @@ collections:
     files:
       - label: "Home Page"
         name: "home"
-        file: "src/app/page.tsx"
+        file: "content/pages/home.md"
         fields:
           - {label: "Title", name: "title", widget: "string", default: "Home"}
           - {label: "Description", name: "description", widget: "text"}
