--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -19,7 +19,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime"}
       - {label: "Draft", name: "draft", widget: "boolean", default: false, required: false}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Body", name: "body", widget: "markdown", modes: ["raw", "rich_text"], default_mode: "raw"}
   
   - name: "pages"
     label: "Pages"
@@ -30,4 +30,4 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string", default: "Home"}
           - {label: "Description", name: "description", widget: "text"}
-          - {label: "Content", name: "body", widget: "markdown", required: false}
+          - {label: "Content", name: "body", widget: "markdown", required: false, modes: ["raw", "rich_text"], default_mode: "raw"}
