--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,7 +1,9 @@
 backend:
   name: github
   repo: cswitenky/cswitenky
-  branch: main # Branch to update (optional; defaults to master)
+  branch: main
+  auth_type: implicit
+  app_id: Ov23lizhHxWPpLAwghmt
 
 # Uncomment below to enable drafts
 publish_mode: editorial_workflow
