--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,9 +2,8 @@ backend:
   name: github
   repo: cswitenky/cswitenky
   branch: main
-  auth_type: "pkce"
-  app_id: "Ov23lizhHxWPpLAwghmtg"
-
+  base_url: https://lustrous-meerkat-bb6352.netlify.app/.netlify/functions
+  auth_endpoint: auth-github
 
 # Uncomment below to enable drafts
 publish_mode: editorial_workflow
