--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,9 +1,8 @@
 backend:
   name: github
-  repo: cswitenky/cswitenky
   branch: main
-  auth_type: implicit
-  client_id: Ov23lizhHxWPpLAwghmt
+  repo: "cswitenky/cswitenky"
+  base_url: https://purple-ocean-0c959db1e.1.azurestaticapps.net
 
 # Uncomment below to enable drafts
 publish_mode: editorial_workflow
