switching decap oauth to decap.switenky.com

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   branch: main
   repo: "cswitenky/cswitenky"
-  base_url: https://purple-ocean-0c959db1e.1.azurestaticapps.net/api/
+  base_url: https://decap.switenky.com/api/
 
 # Uncomment below to enable drafts
 publish_mode: editorial_workflow
